<resources>
    <string name="app_name">My Application</string>
    <string name="font2">Charlotte</string>
    <string name="font1">Precious Soul</string>
    <string name="italics">italic</string>
    <string name="bold">bold</string>
    <string name="hint">Enter some text!</string>
    <string name="enter">Enter</string>
    <string name="exit">exit</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="hi">hi</string>
</resources>
