<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:id="@+id/root"
    tools:context=".MainActivity">
<RelativeLayout
    android:id="@+id/rl"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:paddingLeft="15dp"
        android:fontFamily="@font/charlotte"
        android:text="hi" />

    <EditText
        android:id="@+id/edit"
        android:hint="@string/hint"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@id/text2"
        android:inputType="text"
        android:layout_marginEnd="90dp"
        android:layout_marginTop="20dp"
        tools:ignore="Autofill" />
    <ToggleButton
        android:id="@+id/b1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:layout_marginTop="20dp"
        android:textOn="On"
        android:textOff="Off"
        android:onClick="toggle"
        android:layout_below="@id/text2"
        android:layout_alignParentEnd="true"/>
    <SeekBar
        android:id="@+id/seek"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@id/b1"
        android:max="24"
        android:progress="0"
        android:layout_marginTop="15dp"/>
    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="match_parent"
        android:layout_below="@id/seek"
        android:layout_height="45dp"
        android:orientation="horizontal">
    <RadioButton
        android:id="@+id/r1"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_marginStart="60dp"
        android:onClick="radioOnClick"
        android:layout_height="wrap_content"
        android:text="@string/font1"/>
    <RadioButton
        android:id="@+id/r2"
        android:layout_height="wrap_content"
        android:onClick="radioOnClick"
        android:layout_width="wrap_content"
        android:layout_marginTop="15dp"
        android:checked="true"
        android:layout_marginStart="20dp"
        android:text="@string/font2"/>
    </RadioGroup>
    <CheckBox
        android:id="@+id/check"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/rg"
        android:layout_marginStart="60dp"
        android:layout_marginTop="15dp"
        android:text="@string/bold"/>
    <CheckBox
        android:id="@+id/check2"
        android:layout_width="100dp"
        android:layout_marginStart="20dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@id/rg"
        android:layout_toEndOf="@id/check"
        android:text="@string/italics"/>
    <Button
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/check2"
        android:layout_centerInParent="true"
        android:layout_marginTop="40dp"
        android:onClick="exitApp"
        android:text="@string/exit"
        />
</RelativeLayout>
</ScrollView>